# mr-tagger

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
assets/: Logo.afdesign
src/: App.svelte  Counter.svelte  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  files.rs  frames.rs  image.rs  main.rs
src/components/: FileDrop.svelte  Item.svelte  MultiField.svelte  Page.svelte
src/scripts/: helpers.ts
