[package]
name = "mr-tagger"
version = "0.1.6"
description = "Spotlight alternative"
default-run = "mr-tagger"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0"
backtrace = "0.3"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.3", features = ["dialog-open", "dialog-save", "shell-open"] }
id3 = "1.0"
mp4ameta = "0.11.0"
base64 = "0.13.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
